# tblink-rpc-core

./: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  README.md  ivpm.yaml  setup.py
.github/workflows/: ci.yml
c/: tblink_rpc_transport_json_socket.c  tblink_rpc_transport_json_socket.h
c/include/tblink_rpc/: tblink_rpc.h  tblink_rpc_IParamVal.h  tblink_rpc_ITransport.h
cpp/: Debug.cpp  Debug.h  DynLibSymFinder.cpp  DynLibSymFinder.h  DynSymFinder.cpp  DynSymFinder.h  EndpointBase.cpp  EndpointBase.h  EndpointEventBase.cpp  EndpointEventBase.h  EndpointListenerBase.cpp  EndpointListenerBase.h  EndpointLoopback.cpp  EndpointLoopback.h  EndpointMsgBase.cpp  EndpointMsgBase.h  EndpointMsgTransport.cpp  EndpointMsgTransport.h  EndpointPythonLoopback.cpp  EndpointPythonLoopback.h  Env.cpp  Env.h  Factory.cpp  Factory.h  FifoMessageTransport.cpp  FifoMessageTransport.h  FifoMessageTransportEP.cpp  FifoMessageTransportEP.h  IType.h  ITypeBuilder.h  InterfaceInst.cpp  InterfaceInst.h  InterfaceInstBase.cpp  InterfaceInstBase.h  InterfaceInstLoopback.cpp  InterfaceInstLoopback.h  InterfaceInstMsgTransport.cpp  InterfaceInstMsgTransport.h  InterfaceType.cpp  InterfaceType.h  (+96 more)
cpp/include/tblink_rpc/: IEndpoint.h  IEndpointEvent.h  IEndpointListener.h  IEndpointLoopback.h  IEndpointMsg.h  IEndpointServices.h  IEndpointServicesFactory.h  IFactory.h  IInterfaceImpl.h  IInterfaceImplFactory.h  IInterfaceInst.h  IInterfaceInstFactory.h  IInterfaceType.h  IInterfaceTypeBuilder.h  ILaunchParams.h  ILaunchType.h  IMessageTransport.h  IMethodType.h  IMethodTypeBuilder.h  IParamDecl.h  IParamVal.h  IParamValBool.h  IParamValFactory.h  IParamValInt.h  IParamValMap.h  IParamValStr.h  IParamValVec.h  IParamValVector.h  ISymFinder.h  ITbLink.h  ITbLinkEvent.h  ITbLinkListener.h  ITransport.h  IType.h  ITypeFactory.h  ITypeIfc.h  ITypeInt.h  ITypeMap.h  ITypeVec.h  loader.h  (+1 more)
doc/: EnvSpecificBlockingSupport.md  Notes.md
python/: InterfaceImplClosure.cpp  InterfaceImplClosure.h  InterfaceImplFactoryProxy.cpp  InterfaceImplFactoryProxy.h  TbLinkListenerClosure.cpp  TbLinkListenerClosure.h  TimeCallbackClosure.cpp  TimeCallbackClosure.h  invoke_req_closure.cpp  native.cpp  native.pyx  native_decl.pxd  tblink_rpc_stub.c  tblink_rpc_stub.pyx
python/tblink_rpc/: __main__.py  cmd_gen.py  cmd_gen_args.py  idl_spec.py  input_reader.py  input_reader_yaml.py  input_spec.py  interface_type_spec.py  method_spec.py  output.py  output_spec.py  output_writer.py  output_writer_cpp.py  type_spec.py  type_spec_int.py  type_spec_map.py  type_spec_scalar.py  type_spec_vec.py  yaml_idl_parser.py
python/tblink_rpc_core/: __init__.py  endpoint.py  endpoint_base.py  endpoint_event.py  endpoint_listener.py  endpoint_mgr.py  endpoint_mgr_listener.py  endpoint_msg_transport.py  endpoint_services.py  event_type_e.py  interface_impl_factory.py  interface_inst.py  interface_inst_msg_transport.py  interface_type.py  interface_type_builder.py  invoke_rsp_waiter.py  launch_type.py  method_e.py  method_type.py  method_type_builder.py  native_decl.pxd  param_decl.py  param_val.py  param_val_bool.py  param_val_int.py  param_val_map.py  param_val_str.py  param_val_vec.py  param_val_visitor.py  tblink.py  tblink_event.py  tblink_listener.py  transport.py  transport_dual_fifo.py  transport_json_socket.py  type.py  type_e.py  type_int.py  type_map.py  type_vec.py
python/tblink_rpc_core/json/: json2param.py  json_transport.py  param2json.py
python/tblink_rpc_core/msgs/: build_complete.py  message_base.py
tests/: CMakeLists.txt
tests/cpp/: BfmReqRsp.cpp  BfmReqRsp.h  Env.cpp  Env.h  Path.cpp  Path.h  TblinkRpcSmoke.cpp  TblinkRpcSmoke.h  TblinkRpcTestBase.cpp  TblinkRpcTestBase.h  TblinkRpcThreadedSmoke.cpp  TblinkRpcThreadedSmoke.h  TestEPServices.cpp  TestEPServices.h
tests/python/: interface_spec_parser.py  tblink_rpc_smoke.py  tblink_rpc_testcase.py
tests/sys/common/: defs_rules.mk
tests/sys/pingpong_nb/: PingpongNB.cpp  PingpongNB.h  mkdv.mk  pingpong_if.yaml
